force-app/main/default/objects/HME_Collaboration_Action_Tracker__c/HME_Collaboration_Action_Tracker__c.object-meta.xml
<CustomObject>
    <label>HME Collaboration Action Tracker</label>
    <nameField>
        <displayFormat>HME-{0000}</displayFormat>
        <label>HME Collaboration Action Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HME Collaboration Action Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>