force-app/main/default/objects/HME_Collaboration_Action_Tracker__c/fields/At_Risk__c.field-meta.xml
<CustomField>
    <fullName>At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk</label>
    <type>Checkbox</type>
</CustomField>