force-app/main/default/objects/HME_Collaboration_Action_Tracker__c/fields/In_Danger__c.field-meta.xml
<CustomField>
    <fullName>In_Danger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Danger</label>
    <type>Checkbox</type>
</CustomField>