force-app/main/default/objects/HME_Collaboration_Action_Tracker__c/fields/On_Target__c.field-meta.xml
<CustomField>
    <fullName>On_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Target</label>
    <type>Checkbox</type>
</CustomField>