force-app/main/default/objects/HME_Collaboration_Action_Tracker__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HME_Collaboration_Action_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>