force-app/main/default/objects/HME_Collaboration_Action_Tracker__c/fields/Prepared_for_Team_members_Name__c.field-meta.xml
<CustomField>
    <fullName>Prepared_for_Team_members_Name__c</fullName>
    <label>Prepared for Team members Name</label>
    <type>TextArea</type>
</CustomField>